Enable disableLog in a try-with-resources